show own recipe and last viewed now works
